ros2_ws/log/build_2023-11-23_12-40-46/mypkg/stderr.log
  File "/root/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 1
    improt rclpy
           ^
SyntaxError: invalid syntax

